tests/ui/inference/need_type_info/single-type-generic-suggestion.stderr
error[E0284]: type annotations needed
  --> $DIR/single-type-generic-suggestion.rs:4:8
   |
LL |     "".parse();
   |        ^^^^^ cannot infer type of the type parameter `F` declared on the method `parse`
   |
   = note: cannot satisfy `<_ as FromStr>::Err == _`
help: consider specifying a concrete type for the generic type `F`
   |
LL |     "".parse::<SomeConcreteType>();
   |             ++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
