tests/ui/inference/need_type_info/single-type-generic-suggestion.rs
// compile-fail

fn main() {
    "".parse();
    //~^ ERROR type annotations needed
    //~| HELP consider specifying a concrete type for the generic type `F`
}
